@@ -3,11 +3,13 @@
 \alias{matchPattern}
 \alias{matchPattern,character-method}
 \alias{matchPattern,XString-method}
+\alias{matchPattern,XStringSet-method}
 \alias{matchPattern,XStringViews-method}
 \alias{matchPattern,MaskedXString-method}
 \alias{countPattern}
 \alias{countPattern,character-method}
 \alias{countPattern,XString-method}
+\alias{countPattern,XStringSet-method}
 \alias{countPattern,XStringViews-method}
 \alias{countPattern,MaskedXString-method}
 
