@@ -47,7 +47,9 @@ o Moved the generic functions for width(), shift(), restrict(), narrow(),
 
 STRING MATCHING
 
-o Added support for indels to matchPattern() and countPattern().
+o Added support for indels to matchPattern(), countPattern() and vcountPattern()
+  (vmatchPattern() will follow as soon as MIndex objects support variable-width
+  matches).
 
 o Added the vmatchPattern() and vcountPattern() generic functions with
   methods for XStringSet objects. They are the vectorized versions of
